Cut HML to Modules #2

--- a/main_content.html
+++ b/main_content.html
@@ -19,18 +19,82 @@
     </div>
 
     <div id="description">
-        <div id="ititle"><h3><span></span></h3>
+        <div id="ititle" style="display: block;"><h3><span>Rateparity</span></h3>
         </div>
-        <p id="icategory">Category: <a href="#" class="cat_key"><span></span></a></p>
-        <h4 id="itools">Keywords: <span></span></h4>
+        <p id="icategory" style="display: block;">Category: <a href="#" class="cat_key"><span>Design and Development</span></a></p>
+        <h4 id="itools" style="display: block;">Keywords: <span><a class="keys" href="#">web_application</a><a class="keys" href="#">javascript</a><a class="keys" href="#">reactjs</a><a class="keys" href="#">es6</a><a class="keys" href="#">css3</a><a class="keys" href="#">scss</a><a class="keys"
+                                                                                                                                                                                                                                                                                            href="#">requirements</a><a
+            class="keys" href="#">nodejs</a><a class="keys" href="#">webpack</a><a class="keys" href="#">git</a><a class="keys" href="#">rest_api</a></span></h4>
         <div id="ibody">
-            <div id="idescription" style="left: 0px;"><span style="opacity: 1; display: block;"></span></div>
-            <div id="iscreenshots" style="bottom: 0px;"><span></span></div>
+            <div id="idescription" style="display: block;"><span>
+
+<h3>Employed as standalone Frontend Developer to build fully customizable UI widgets and the backend configuration app  in association with a backend data api developer.</h3>
+
+<p>
+The objective was to create a new product that would explore the potentials of UI widgets and thus enter a new market for the company
+<br>
+My role as a Frontend developer was to create the independable CORS empowered Javascript widgets that would load on affiliate sites. The widgets should invoke the latest Js trends, load on sites without causing or receiving Js / CSS defects and should be as lightweight as possible restraining from vaguely loading countless libraries. Additianally I was attached to build the backend configuration application.
+</p>
+
+<h4>Main Developments</h4>
+
+<u>FRONTEND WIDGETS</u>
+<ul>
+<li>Design and develop the app's Installer that can be used on affiliate sites with a single HTML “Head”entry</li>
+<li>Design and develop decoupled SPA widgets, that reside on their own domains and can be launched by installer on demand</li>
+<li>
+<p>
+Publish 5 distinct widget types, with 4 viewport layouts for each, to accommodate diversity of screen displays:
+<br> - Price checks::          Integrates calendar that helps users check hotel prices per accommodation and compare with major booking channels
+ <br>- Active offers::          Registered offers can be displayed with a user click
+ <br>- Notifications::          Intresting metrics, in the form of notifications are displayed on sites screen
+ <br>- Popup offers::          Offers can popup on user display at navigation time, based on submitted configuration
+</p>
+</li>
+<li>Utilize the latest React 16.8 build and make use of powerful features like Hooks, Code splitting, Lazy loading, Context api, Dynamic imports etc</li>
+<li>Make extensive use of cache so that widgets restrain from excessive calls to the remote service</li>
+<li>Structure the development environment with NodeJs, Webpack, Babel etc</li>
+</ul>
+<br>
+<u>BACKEND APPLICATION</u>
+<ul>
+<li>
+<p>Create a React 16.4 application based on a helper theme with some main group activities
+<br>- Configuration domains per widget
+<br>- Metrics and evaluation of widget usage
+<br>- Main Dashboard, Install and more..
+</p>
+</li>
+<li>
+<p>
+The widgets configuration includes
+<br>- Configurable, on screen, positioning
+<br>- Configurable colors and literals
+<br>- Configurable activation / deactivation periods
+</p>
+</li>
+</ul>
+
+        </span></div>
+            <div id="iscreenshots" style="display: block;"><span><a href="images/rateparity/widget_price_full.png"><img src="images/rateparity/widget_price_full.png" title="widget price full"></a><a href="images/rateparity/widget_max_roomstream.png"><img
+                src="images/rateparity/widget_max_roomstream.png" title="widget max roomstream"></a><a href="images/rateparity/widget_offer_full.png"><img src="images/rateparity/widget_offer_full.png" title="widget offer full"></a><a href="images/rateparity/config_price_position.png"><img
+                src="images/rateparity/config_price_position.png" title="config price position"></a><a href="images/rateparity/config_offer_colors.png"><img src="images/rateparity/config_offer_colors.png" title="config offer colors"></a></span></div>
         </div>
         <div id="iextra">
-            <div id="ilinks" style="display: none;">
+            <div id="ilinks" style="display: block;">
                 <strong>Link</strong>
-                <span></span>
+                <span><a target="_blank" style="text-transform: uppercase" href="https://code.rateparity.com/v4.versions/?debug=price.max">price max<img src="images/_buttons/link.jpg" style="width:35px; float:right "></a><a target="_blank" style="text-transform: uppercase"
+                                                                                                                                                                                                                                href="https://code.rateparity.com/v4.versions/?debug=price.full">price full<img
+                    src="images/_buttons/link.jpg" style="width:35px; float:right "></a><a target="_blank" style="text-transform: uppercase" href="https://code.rateparity.com/v4.versions/?debug=price.min">price min<img src="images/_buttons/link.jpg" style="width:35px; float:right "></a><a
+                    target="_blank" style="text-transform: uppercase" href="https://code.rateparity.com/v4.versions/?debug=price.plain">price plain<img src="images/_buttons/link.jpg" style="width:35px; float:right "></a><a target="_blank" style="text-transform: uppercase"
+                                                                                                                                                                                                                               href="https://code.rateparity.com/v4.versions/?debug=price.mob">price mob<img
+                    src="images/_buttons/link.jpg" style="width:35px; float:right "></a><a target="_blank" style="text-transform: uppercase" href="https://code.rateparity.com/v4.versions/?debug=offer.full">offer full<img src="images/_buttons/link.jpg" style="width:35px; float:right "></a><a
+                    target="_blank" style="text-transform: uppercase" href="https://code.rateparity.com/v4.versions/?debug=offer.plain">offer plain<img src="images/_buttons/link.jpg" style="width:35px; float:right "></a><a target="_blank" style="text-transform: uppercase"
+                                                                                                                                                                                                                               href="https://code.rateparity.com/v4.versions/?debug=offer.mob">offer mob<img
+                    src="images/_buttons/link.jpg" style="width:35px; float:right "></a><a target="_blank" style="text-transform: uppercase" href="https://code.rateparity.com/v4.versions/?debug=nudges">nudges<img src="images/_buttons/link.jpg" style="width:35px; float:right "></a><a target="_blank"
+                                                                                                                                                                                                                                                                                            style="text-transform: uppercase"
+                                                                                                                                                                                                                                                                                            href="https://code.rateparity.com/v4.versions/?debug=snippet">snippet<img
+                    src="images/_buttons/link.jpg" style="width:35px; float:right "></a><a target="_blank" style="text-transform: uppercase" href="https://code.rateparity.com/v4.versions/?debug=exit">exit<img src="images/_buttons/link.jpg" style="width:35px; float:right "></a></span>
             </div>
             <div id="icomplements" style="display: none;">
                 <strong>Complements</strong>
@@ -42,9 +106,11 @@
                 <strong>Media</strong>
                 <span></span>
             </div>
-            <div id="ifiles" style="display: none;">
+            <div id="ifiles" style="display: block;">
                 <strong>Files</strong>
-                <span></span>
+                <span><a href="images/rateparity/config_snippet_content.png"><img src="images/_buttons/png.png"><p>CONFIG SNIPPET CONTENT</p></a><a href="images/rateparity/config_disparity_details.png"><img src="images/_buttons/png.png"><p>CONFIG DISPARITY DETAILS</p></a><a
+                    href="images/rateparity/config_welcome.png"><img src="images/_buttons/png.png"><p>CONFIG WELCOME</p></a><a href="images/rateparity/widget_price_mobile.png"><img src="images/_buttons/png.png"><p>WIDGET PRICE MOBILE</p></a><a href="images/rateparity/widget_max_teaser.png"><img
+                    src="images/_buttons/png.png"><p>WIDGET MAX TEASER</p></a></span>
             </div>
         </div>
     </div>
