--- a/temp.html
+++ b/temp.html
@@ -1,110 +1,116 @@
-[
-["study
-   ","Enroll 'Desktop Publishing and 3D Animation' | AKMI Vocational Institute
-    ","
-        For the first year we have been practicing strictly working 'on-hand' as to 'Free Hand Drawing', 'Paper Drawing Animations' and issuing 'Page Models' for magazines etc, while also studying 'Art History' and
-        'Typography
-        History'. The next year I had my first experience with computing using tools like 'Photoshop 5.5', 'Corel Draw 8' and '3D-Max 3'
+<div id="iextra">
+
+        <div id="ilinks" style="display: block; height: 5%;" class="extra_preview">
+            <strong>Link</strong>
+            <span style="display: none;">
+            <a target="_blank" style="text-transform: uppercase" href="https://code.rateparity.com/v4.versions/?debug=price.max">price max
+            <img src="images/_buttons/link.jpg" style="width:35px; float:right ">
+            </a>
+            <a target="_blank" style="text-transform: uppercase"
+            href="https://code.rateparity.com/v4.versions/?debug=price.full">price full
+            <img
+            src="images/_buttons/link.jpg" style="width:35px; float:right ">
+            </a>
+            <a target="_blank" style="text-transform: uppercase" href="https://code.rateparity.com/v4.versions/?debug=price.min">price min
+            <img src="images/_buttons/link.jpg" style="width:35px; float:right ">
+            </a>
+            <a target="_blank"
+            style="text-transform: uppercase"
+            href="https://code.rateparity.com/v4.versions/?debug=price.plain">price plain
+            <img
+            src="images/_buttons/link.jpg" style="width:35px; float:right ">
+            </a>
+            <a target="_blank" style="text-transform: uppercase" href="https://code.rateparity.com/v4.versions/?debug=price.mob">price mob
+            <img src="images/_buttons/link.jpg" style="width:35px; float:right ">
+            </a>
+            <a target="_blank"
+            style="text-transform: uppercase"
+            href="https://code.rateparity.com/v4.versions/?debug=offer.full">offer full
+            <img
+            src="images/_buttons/link.jpg" style="width:35px; float:right ">
+            </a>
+            <a target="_blank" style="text-transform: uppercase" href="https://code.rateparity.com/v4.versions/?debug=offer.plain">offer plain
+            <img src="images/_buttons/link.jpg" style="width:35px; float:right ">
+            </a>
+            <a
+            target="_blank" style="text-transform: uppercase" href="https://code.rateparity.com/v4.versions/?debug=offer.mob">offer mob
+            <img src="images/_buttons/link.jpg" style="width:35px; float:right ">
+            </a>
+            <a target="_blank" style="text-transform: uppercase"
+            href="https://code.rateparity.com/v4.versions/?debug=nudges">nudges
+            <img
+            src="images/_buttons/link.jpg" style="width:35px; float:right ">
+            </a>
+            <a target="_blank" style="text-transform: uppercase" href="https://code.rateparity.com/v4.versions/?debug=snippet">snippet
+            <img src="images/_buttons/link.jpg" style="width:35px; float:right ">
+            </a>
+            <a target="_blank"
+            style="text-transform: uppercase"
+            href="https://code.rateparity.com/v4.versions/?debug=exit">exit
+            <img
+            src="images/_buttons/link.jpg" style="width:35px; float:right ">
+            </a>
+            </span>
+        </div>
 
 
-"],["job
-   ","Employed by 'Aventis Pharma'
-    ","
-        I was employed as 'messenger' of the company with the 'out world' partners, while also providing random assistance, whenever it was required, within the premises. At the moment ‘aventis pharma’ was a newly
-        consisted
-        company, the outcome merger of 'rhone pouleng rhorer' and 'hegst marrion russel' pharmaceuticals, that its competitiveness was ranking more or less at the middle.
+        <div id="icomplements" style="display: none; height: 5%;" class="extra_preview">
+            <strong>Complements
+            </strong>
+            <div id="itutor" style="display: none;">
+            <span style="display: none;">
+            </span>
+            </div>
+            <div id="iscore" style="display: none;">
+            <span style="display: none;">
+            </span>
+            </div>
+            <div id="icomment" style="display: none;">
+            <span style="display: none;">
+            </span>
+            </div>
+        </div>
 
 
-"],["study_end
-   ","Graduate 'Desktop Publishing and 3D Animation' | AKMI Vocational Institute
-    ","-
+        <div id="imedia" style="display: none; height: 5%;" class="extra_preview">
+            <strong>Media
+            </strong>
+            <span style="display: none;"></span>
+        </div>
 
 
-"],["study
-   ","Enroll 'Graphics Design for Printable Mediums and Web' | AKMI Vocational Institute
-    ","There I had my original experience with web concepts, namely site design and development, since we gained practicing skills on Macromedia's web tools such as Dreamweaver &amp; Flash.
+        <div id="ifiles" style="display: block; height: 80%;" class="extra_preview">
+            <strong>Files
+            </strong>
+            <span style="display: block;">
+            <a href="images/rateparity/config_snippet_content.png">
+            <img src="images/_buttons/png.png">
+            <p>CONFIG SNIPPET CONTENT
+            </p>
+            </a>
+            <a href="images/rateparity/config_disparity_details.png">
+            <img src="images/_buttons/png.png">
+            <p>CONFIG DISPARITY DETAILS
+            </p>
+            </a>
+            <a
+            href="images/rateparity/config_welcome.png">
+            <img src="images/_buttons/png.png">
+            <p>CONFIG WELCOME
+            </p>
+            </a>
+            <a href="images/rateparity/widget_price_mobile.png">
+            <img src="images/_buttons/png.png">
+            <p>WIDGET PRICE MOBILE
+            </p>
+            </a>
+            <a href="images/rateparity/widget_max_teaser.png">
+            <img
+            src="images/_buttons/png.png">
+            <p>WIDGET MAX TEASER
+            </p>
+            </a>
+            </span>
+        </div>
 
-
-"],["study_end
-   ","Graduate 'Graphics Design for Printable Mediums and Web' | AKMI Vocational Institute
-    ","-
-
-
-"],["job
-   ","'Aventis Pharma' merged with 'Sanofi' Pharmaceutical
-    ","
-        At the same time in 2005 , while still occupied by 'Aventis Pharma' Pharmaceutical, there was a 'before the gate' major merger announced by our company with 'Sanofi' Pharmaceutical. The merger is purposely
-        described as
-        'major' since the newborn company would climb high above previous competitive placements, and gaining huge market shares would now strive in competition to top ranking pharmaceuticals world-wide.
-
-
-"],["study
-   ","Intergraphics | Enroll 'Web Design and Development'
-    "," During the class, I faced a well structured introduction to Web protocols like HMLT, CSS, javascript and an infantile meeting experience with PHP, MySQL and Apache. While the training turned out
-        really advantageous and the outcome was my first web site, build with ajax technology, exclusively consisting on protocols, my appetite on comprehending web technologies was enormous and the need to integrate
-        myself
-        with a root understanding over the concepts has generated my interest to obtain more advanced education.
-
-"],["study
-   ","New York College in Association to University of Greenwich | Internet Engineering and Web Management
-    ","
-
-
-"],["job
-   ","Released from Sanofi-Aventis Pharmaceutical
-    ","
-        I was released from Sanofi aventis after 11 years employment.The recession that stroke the country has led company to unleash almost half of the crew in near three years time;
-
-"],["study_end
-   ","Graduate 'Internet Engineer and Web Management' | University of Greenwich
-    ","
-        Graduated College with a 'first class honors' degree from University and attached a 'student of the year' distinction for last year performance. My final Thesis was proposed for adoption by the associated 'New York College' for Maintaining and Scheduling institute's
-        year resources.
-
-
-"],["job
-   ","Self-Employeed 'Web Design and Development'
-    ","
-        Take over freelance projects for local merchants. Mainly invoked hardcoded storefronts and web solutions completely designed and developed from scratch, grounded on web technologies like PHP, JS, XSLT, HTML5, CSS3 more. Most prominent project, ELGREG, a mixture of all
-        afordmentioned techs provided a hardcoded bottom-up storefront and backend portal.
-
-
-"],["job
-   ","Employeed shortly for 'Deltacosmos' and 'CCS Education'
-    ","Occupied as Full stack and Front-end Developer for the companies corespondingly, maintaining, upgrading and extending 'Deltacosmos' ERP and building a JSON API for 'CSS Eduction' that would be
-        consumed internally by HMTL5 - Javascript application
-
-
-"],["job
-   ","Contracted 'Remote Web Developer' for German 'Commerzbank Infobroker'
-    ","
-        Occupied as a part of Scrum maintained, multicultural developers environment for the implementation of Commerzbank Intranet project, namely Infobroker. Main responsibility was to collect, design and retrieve proprietary data - or complete data-views - through
-        Interactive Data web services, using a custom graphical interface of enterprise. The final output would be visually styled for web monitoring, dictated strictly through customer specifications.
-
-
-"],["job
-   ","Contracted 'Remote Full Stack Developer' for American 'Noblelinx CRM'
-    ","
-        Occupied remotely as standalone Full Stack Developer in Agile mode with the Manager, on a lecacy CRM system, originated nearly a decade backwards. Key assingment was to maintain and upgrade legacy coded mixed technologies, to more efficient, controllable environment
-        and to design and adjust new features that would add value to company's daily routines.
-
-
-"],["job
-   ","Contracted remotely as Full Stack Developer for London-based company 'ECEP Technologies'
-    ","
-        Contracted as freelance, standalone Full stack Developer to design and build a warehouse inventory for Ecep Technologies .The English, Londoner enterpreneur needed a .weba monitoring system that could keep track of products, purchases, deliveries and sales activities
-        of the company. The tool that was used was Laravel 5.1 MVC
-
-
-"],["job
-   ","Employeed by domestic company Cosmores as in-house Fullstack Developer '
-    ","
-        Employeed by Cosmores as in-house Fullstack Developer with the PHP-MySQL and plain Js / Jquery in the backend and frontend respectively. The mission was to upgrade, extend, maintain and enforce security processes on many parts of the company's daily routines
-
-
-"],["job
-   ","Developing Rateparity as single Frontend Developer, while still employeed by Cosmores '
-    ","
-        Still employeed by Cosmores I started developing Rateparity as single Frontend Developer building with the latest ES6+ upgrade and the popular React Js library and in collab with a remote datastore in the Backend. Developing customizable, one-line-installation CORS
-        Widgets for enriching the user experience on customers sites. Additionally developing the configuration app in the backend for widgets customization and usage monitoring and evaluation"]
-    ]
+</div>
