--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Manos Portfolio</title>
     <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="script.js"></script>
-    <link href="style.css" type="text/css" rel="stylesheet"/>
+    <link type="text/css" rel="stylesheet" href="style.css"/>
+    <script type="module" src="./installer.js"></script>
 </head>
 <body>
 <div id="view">
@@ -113,10 +114,10 @@
                 </ul>
             </div>
             <div id="author_presentation">
-                <p>Creativity is the tool that while enjoy using and practicing is leading me a nice journey throughout diverse educational and occupational experiences.
-                    Unfolding my need for being creative and enthousiasm for technology I started my training on graphics design. Leveraging my skills on the
-                    area have let me acknowledge spare concepts around web technology. The need for obtaining fundamental understanding has gradually overwhelmed me, and drove me to migrate interest on the field. <br/>
-                </p>
+<!--                <p>Creativity is the tool that while enjoy using and practicing is leading me a nice journey throughout diverse educational and occupational experiences.-->
+<!--                    Unfolding my need for being creative and enthousiasm for technology I started my training on graphics design. Leveraging my skills on the-->
+<!--                    area have let me acknowledge spare concepts around web technology. The need for obtaining fundamental understanding has gradually overwhelmed me, and drove me to migrate interest on the field. <br/>-->
+<!--                </p>-->
                 <img src="images/profile/manos2.jpg"/>
             </div>
             <div id="interactive_intro" class='citation'>
@@ -336,26 +337,26 @@
                 </div>
                 <div id="introduction_cv_field">
                     <div class="main_txt">
-                        <h2>Welcome</h2>
-                        <p>
-                            <span>Hi! My name is Manos.</span>
-                            For near the last and a half decade I have been studying and practicing my skills on diverse domains of educational interest,
-                            attending a bachelor degree from an English University while also taking multiple full-year trainings on Athenian private vocational institutes.
-                            The aspects of my study and research could be, in an abstruct manner, summarized to 'Web and Desktop Applications Development','Business Management and Marketing' and 'Graphics Design'.
-                            At the same time, speaking of my occupational experience, for more than a decade I have been occupied and have been evolving my competences and communication in a top-competent,world-wide extending
-                            pharmaceutical company, complying and assimilating to my profile highly strict and demanding business procedures.
-                        </p>
+<!--                        <h2>Welcome</h2>-->
+<!--                        <p>-->
+<!--                            <span>Hi! My name is Manos.</span>-->
+<!--                            For near the last and a half decade I have been studying and practicing my skills on diverse domains of educational interest,-->
+<!--                            attending a bachelor degree from an English University while also taking multiple full-year trainings on Athenian private vocational institutes.-->
+<!--                            The aspects of my study and research could be, in an abstruct manner, summarized to 'Web and Desktop Applications Development','Business Management and Marketing' and 'Graphics Design'.-->
+<!--                            At the same time, speaking of my occupational experience, for more than a decade I have been occupied and have been evolving my competences and communication in a top-competent,world-wide extending-->
+<!--                            pharmaceutical company, complying and assimilating to my profile highly strict and demanding business procedures.-->
+<!--                        </p>-->
                     </div>
                     <div class="aux_txt">
-                        <h3>What is the site about</h3>
-                        <p>
-                            On site you may resume both of my occupational and educational timelines, how the two were drawn and evolve in parellel during previous years. Context may be indexed in detail,
-                            either as bulleted descriptions or guided by an interactive timeline. Along with the descriptive context you may also have an overview on some of the most critical projects that I have encountered.
-                            Therefore you may find available work-samples while working as a freelance developer on the Web, as officer occupied by pharmaceutical company, and last but not least as student at university.
-                            For the latter you may additionally index the scores attained, instructors’ comments, while also documentation and video reference whenever appropriate.
-                            Finally on the last page there are available links to the officials sites for each cited organization. You are suggested to request for reference where available. If you wish you may contact me
-                            using any of my personal accounts provided for some of the most popular social networks. Please suggest the context if you feel like.
-                        </p>
+<!--                        <h3>What is the site about</h3>-->
+<!--                        <p>-->
+<!--                            On site you may resume both of my occupational and educational timelines, how the two were drawn and evolve in parellel during previous years. Context may be indexed in detail,-->
+<!--                            either as bulleted descriptions or guided by an interactive timeline. Along with the descriptive context you may also have an overview on some of the most critical projects that I have encountered.-->
+<!--                            Therefore you may find available work-samples while working as a freelance developer on the Web, as officer occupied by pharmaceutical company, and last but not least as student at university.-->
+<!--                            For the latter you may additionally index the scores attained, instructors’ comments, while also documentation and video reference whenever appropriate.-->
+<!--                            Finally on the last page there are available links to the officials sites for each cited organization. You are suggested to request for reference where available. If you wish you may contact me-->
+<!--                            using any of my personal accounts provided for some of the most popular social networks. Please suggest the context if you feel like.-->
+<!--                        </p>-->
                     </div>
                 </div>
             </div>
