#COMPONENTS | PROGRESS #2 *********************************  - ADD A PROTO FOR THE MONITOR AND MONITOR-LIST COMPONENTS

--- a/index.html
+++ b/index.html
@@ -52,66 +52,66 @@
             </div>
             <h1>Resume</h1>
             <div id="skills_preview" class="monitor">
-                <div id='skill_fields' class='mbuttons'><b title='project'>projects</b><b title="reference">references</b><b title="tool">skills</b><em>||</em></div>
-                <div id="welcome">
-                    <h3>Web Development</h3>
-                    <h3>Web Design</h3>
-                    <h3>Graphics Design</h3>
-                    <h3 style="color:goldenrod">Welcome</h3>
-                </div>
+<!--                <div id='skill_fields' class='mbuttons'><b title='project'>projects</b><b title="reference">references</b><b title="tool">skills</b><em>||</em></div>-->
+<!--                <div id="welcome">-->
+<!--                    <h3>Web Development</h3>-->
+<!--                    <h3>Web Design</h3>-->
+<!--                    <h3>Graphics Design</h3>-->
+<!--                    <h3 style="color:goldenrod">Welcome</h3>-->
+<!--                </div>-->
 
-                <ul>
-                    <li id='project' class='slide_animated'>
-                        <div class='mitem'>
-                            <h2>Projects</h2>
-                            <h3>Project Name</h3>
-                            <h4>Tech Field</h4>
-                            <p>Description</p>
-                            <img/>
-                        </div>
-                        <div>&nbsp;</div>
-                    </li>
-                    <li id='reference'>
-                        <div class='mitem'>
-                            <h2>References</h2>
-                            <h3>Instructor</h3>
-                            <h4>Instructor Title</h4>
-                            <p>Comment</p>
-                            <img/>
-                        </div>
-                        <div>&nbsp;</div>
-                    </li>
-                    <li id="tool">
-                        <div class='mitem'>
-                            <h2>Skills</h2>
-                            <div class='mgroupi'>
-                                <h4>Tools</h4>
-                            </div>
-                            <div class="mgroupi">
-                                <h4>Tools</h4>
-                            </div>
-                            <div class='mgroupi'>
-                                <h4>Tools</h4>
-                            </div>
-                            <div class='mgroupi'>
-                                <h4>Tools</h4>
-                            </div>
-                            <div class='mgroupi'>
-                                <h4>Tools</h4>
-                            </div>
-                            <div class='mgroupi'>
-                                <h4>Tools</h4>
-                            </div>
-                            <div class='mgroupi'>
-                                <h4>Tools</h4>
-                            </div>
-                            <div class='mgroupi'>
-                                <h4>Tools</h4>
-                            </div>
-                        </div>
-                        <div>&nbsp;</div>
-                    </li>
-                </ul>
+<!--                <ul>-->
+<!--                    <li id='project' class='slide_animated'>-->
+<!--                        <div class='mitem'>-->
+<!--                            <h2>Projects</h2>-->
+<!--                            <h3>Project Name</h3>-->
+<!--                            <h4>Tech Field</h4>-->
+<!--                            <p>Description</p>-->
+<!--                            <img/>-->
+<!--                        </div>-->
+<!--                        <div>&nbsp;</div>-->
+<!--                    </li>-->
+<!--                    <li id='reference'>-->
+<!--                        <div class='mitem'>-->
+<!--                            <h2>References</h2>-->
+<!--                            <h3>Instructor</h3>-->
+<!--                            <h4>Instructor Title</h4>-->
+<!--                            <p>Comment</p>-->
+<!--                            <img/>-->
+<!--                        </div>-->
+<!--                        <div>&nbsp;</div>-->
+<!--                    </li>-->
+<!--                    <li id="tool">-->
+<!--                        <div class='mitem'>-->
+<!--                            <h2>Skills</h2>-->
+<!--                            <div class='mgroupi'>-->
+<!--                                <h4>Tools</h4>-->
+<!--                            </div>-->
+<!--                            <div class="mgroupi">-->
+<!--                                <h4>Tools</h4>-->
+<!--                            </div>-->
+<!--                            <div class='mgroupi'>-->
+<!--                                <h4>Tools</h4>-->
+<!--                            </div>-->
+<!--                            <div class='mgroupi'>-->
+<!--                                <h4>Tools</h4>-->
+<!--                            </div>-->
+<!--                            <div class='mgroupi'>-->
+<!--                                <h4>Tools</h4>-->
+<!--                            </div>-->
+<!--                            <div class='mgroupi'>-->
+<!--                                <h4>Tools</h4>-->
+<!--                            </div>-->
+<!--                            <div class='mgroupi'>-->
+<!--                                <h4>Tools</h4>-->
+<!--                            </div>-->
+<!--                            <div class='mgroupi'>-->
+<!--                                <h4>Tools</h4>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div>&nbsp;</div>-->
+<!--                    </li>-->
+<!--                </ul>-->
             </div>
             <div id="author_presentation">
 <!--                <p>Creativity is the tool that while enjoy using and practicing is leading me a nice journey throughout diverse educational and occupational experiences.-->
