--- a/view.html
+++ b/view.html
@@ -1,41 +1,9 @@
-<html>
-<link type="text/css" href="style.css"/>
-<body>
 <script type="module">
-    import TimelineList from "./components/TimelineList.js";
+
+    import ProjectGroupPool from "./components/ProjectGroupPool.js";
+
+    // ProjectGroupPool();
+
 </script>
-<div id="interactive_cv_field"></div>
-<style>
-    #timeline {
-        float: left;
-        list-style-type: none;
-        display: inline;
-    }
 
-    #timeline li {
-        float: left;
-        margin: 4px;
-    }
-
-    #timeline li > section {
-        position: absolute;
-        top:20%;
-        left: 20%;
-        width: 60%;
-        display: none;
-    }
-
-    #timeline li > section > a {
-        visibility: hidden;
-    }
-
-    #timeline li:hover > section {
-        position: absolute;
-        display: block;
-    }
-
-    #timeline p {
-    }
-</style>
-</body>
-</html>
+<div id="dev"></div>
