#COMPONENTS | BREAK MORE PARTS **************************************  - <DESCRIPTION> PAGE COMPONENTS  - <CERTIFICATES> PAGE COMPONENTS

--- a/view.html
+++ b/view.html
@@ -1,9 +1,14 @@
-<script type="module">
+<article class="reference-domain">
+    <header>EDUCATION</header>
 
-    import ProjectGroupPool from "./components/ProjectGroupPool.js";
+    <section class="reference-group">
+        <h3>GROUP NAME</h3>
+        <h4>DOMAIN</h4>
+        <ul>
+            <li>
+                <a href="#">name</a>
+            </li>
+        </ul>
+    </section>
 
-    // ProjectGroupPool();
-
-</script>
-
-<div id="dev"></div>
+</article>
