#COMPONENTS | <LAYOUT> ********************************  - INITIALIZE THE <LAYOUT> CLASS AND BIND DEV-PHASE   INTERACTIVITY TO THE  'ABOUT-NAVIGATION' MENU  - BUILD MORE AUTONOMOUS COMPONENTS

--- a/dev.html
+++ b/dev.html
@@ -1,5 +1,4 @@
 <script type="module">
-import ReferenceGroup from "./components/ReferenceGroup.js";
-
+import AboutNavigationMain from "./components/AboutNavigationMain.js";
 </script>
 <div id="dev"></div>
