--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="script.js"></script>
     <link type="text/css" rel="stylesheet" href="style.css"/>
     <script type="module" src="./modules.js"></script>
+    <link type="text/css" rel="stylesheet" href="components/layout.css"/>
 </head>
 <body>
 <div id="view">
@@ -25,29 +26,30 @@
                     <li><a id="document_cv" href="#">Document</a></li>
                 </ul>
 
-                <div id="search">
-                    <div id="search_radio">
-                        <div>
-                            <label>
-                                project
-                                <input type="radio" name="search" value="project" checked>
-                            </label>
-                        </div>
-                        <div>
-                            <label>
-                                skill
-                                <input type="radio" name="search" value="skill">
-                            </label>
-                        </div>
-                    </div>
-                    <div id="search_result">
-                        <input list="project_list">
-                        <datalist id="project_list">
-                        </datalist>
-                        <datalist id="skill_list">
-                        </datalist>
-                    </div>
+                <div id="global_search">
+<!--                    <div id="search_radio">-->
+<!--                        <div>-->
+<!--                            <label>-->
+<!--                                project-->
+<!--                                <input type="radio" name="search" value="project" checked>-->
+<!--                            </label>-->
+<!--                        </div>-->
+<!--                        <div>-->
+<!--                            <label>-->
+<!--                                skill-->
+<!--                                <input type="radio" name="search" value="skill">-->
+<!--                            </label>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div id="search_result">-->
+<!--                        <input list="project_list">-->
+<!--                        <datalist id="project_list">-->
+<!--                        </datalist>-->
+<!--                        <datalist id="skill_list">-->
+<!--                        </datalist>-->
+<!--                    </div>-->
                 </div>
+
 
             </div>
             <h1>Resume</h1>
