--- a/web-component/web-component.html
+++ b/web-component/web-component.html
@@ -13,7 +13,7 @@
     <section>
         <header></header>
         <p></p>
-        <footer></footer>
+        <page-footer></page-footer>
         <aside></aside>
         <hr/>
     </section>
