#COMPONENTS | STYLIZE COMPONENTS **************************************  - SET STYLES ON COMPONENT IN COMPLETE ISOLATION - BEFORE NESTING TO LAYOUT

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="module" src="./modules.js"></script>
     <link type="text/css" rel="stylesheet" href="components/layout.css"/>
 </head>
-<body>
+<body style="background: #888">
 
 <div id="view">
 
@@ -17,11 +17,11 @@
 
         <div id="global-navigation"></div>
 
-<!--        <div id="page-introduction"></div>-->
+        <div id="page-introduction"></div>
 
 <!--        <div id="page-projects"></div>-->
 
-        <div id="page-footer"></div>
+<!--        <div id="page-footer"></div>-->
 
 
     </div>
