#COMPONENTS | ATTACH COMPONENTS TO PAGE (PARTIAL) *********************************************************  - APPLY CSS TO PAGE AND NEST PART OF COMPONENTS WITH BASIC INTERACTIVITY

--- a/dev.html
+++ b/dev.html
@@ -1,4 +1,8 @@
 <script type="module">
-import AboutNavigationMain from "./components/AboutNavigationMain.js";
+    // import WCDescriptionSlideshow from "./components/DescriptionSlideshow.js";
+    // import DescriptionExtra from "./components/DescriptionExtra.js";
+    import ProjectGroupPool from "./components/ProjectGroupPool.js";
 </script>
+<body style="background:#444">
 <div id="dev"></div>
+</body>
