--- a/web-component/web-component.html
+++ b/web-component/web-component.html
@@ -18,5 +18,5 @@
         <hr/>
     </section>
 </template>
-<script src="WebComponent.js"></script>
+<script src="BasicWebComponent.js"></script>
 </html>
