#COMPONENTS | ATTACH COMPONENTS TO PAGE (PARTIAL) #2 ****************************************************************  - BUILDING THE 'PROJECT DESCRIPTION' PAGE

--- a/dev.html
+++ b/dev.html
@@ -1,7 +1,9 @@
 <script type="module">
     // import WCDescriptionSlideshow from "./components/DescriptionSlideshow.js";
     // import DescriptionExtra from "./components/DescriptionExtra.js";
-    import ProjectGroupPool from "./components/ProjectGroupPool.js";
+    // import ProjectGroupPool from "./components/ProjectGroupPool.js";
+    import PageProjects from './page-projects.js'
+
 </script>
 <body style="background:#444">
 <div id="dev"></div>
