--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
     <div id="wrapper">
 
-        <div id="global-navigation"></div>
-
-        <div id="page-introduction"></div>
+<!--        <div id="global-navigation"></div>-->
+<!---->
+<!--        <div id="page-introduction"></div>-->
 
         <div id="page-projects"></div>
 
