#COMPONENTS | ADD TEMPLATE OF 'REFERENCES' PAGE ************************************************************  - 'REFERENCES' PAGE WITH SAMPLE DATA

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 
     <div id="wrapper">
 
-<!--        <div id="global-navigation"></div>-->
-<!---->
-<!--        <div id="page-introduction"></div>-->
+        <div id="global-navigation"></div>
 
-        <div id="page-projects"></div>
+        <div id="page-introduction"></div>
 
-        <!--        <div id="page-footer"></div>-->
+        <div id="page-projects" style="display:none"></div>
 
+        <div id="page-footer" style="display:none"></div>
 
     </div>
+
 </div>
 
 <script type="module" src="./modules.js"></script>
@@ -36,12 +36,7 @@
             document.head.appendChild(script);
         })
     ;
-    // let req = async () => {
-    //     let resp =  await window.fetch('http://localhost:3000/items');
-    //
-    // };
-    //
-    // req();
+
 </script>
 </body>
 </html>
